WebXR: Make the gesture requirement message more generic

It is now being used for more than just exclusive sessions.
Also change the phrasing around user activation more accurate.

Bug: 844228
Change-Id: Ieee6c1ca856f7abdc04eabb9724973eaae79ac38
Reviewed-on: https://chromium-review.googlesource.com/1066814
Reviewed-by: Brandon Jones <bajones@chromium.org>
Commit-Queue: David Dorwin <ddorwin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560127}