third_party/blink/renderer/modules/xr/xr_device.cc
@@ -28,8 +28,8 @@ const char kExclusiveNotSupported[] =
 const char kNoOutputContext[] =
     "Non-exclusive sessions must be created with an outputContext.";
 
-const char kRequestNotInUserGesture[] =
-    "Exclusive sessions can only be requested during a user gesture.";
+const char kRequestRequiresUserActivation[] =
+    "The requested session requires user activation.";
 
 }  // namespace
 
@@ -129,7 +129,7 @@ ScriptPromise XRDevice::requestSession(
     if (!Frame::HasTransientUserActivation(doc ? doc->GetFrame() : nullptr)) {
       return ScriptPromise::RejectWithDOMException(
           script_state,
-          DOMException::Create(kSecurityError, kRequestNotInUserGesture));
+          DOMException::Create(kSecurityError, kRequestRequiresUserActivation));
     }
   }
 
@@ -139,7 +139,7 @@ ScriptPromise XRDevice::requestSession(
     if (!Frame::HasTransientUserActivation(doc ? doc->GetFrame() : nullptr)) {
       return ScriptPromise::RejectWithDOMException(
           script_state,
-          DOMException::Create(kSecurityError, kRequestNotInUserGesture));
+          DOMException::Create(kSecurityError, kRequestRequiresUserActivation));
     }
   }
 
